manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sltrx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sltrx
  template:
    metadata:
      labels:
        app: sltrx
    spec:
      containers:
      - name: sltrx
        image: hermanwahyudi/sltrx:v1.0.0
        ports:
        - containerPort: 5000
