manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sltrx
spec:
  selector:
    app: sltrx
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
