manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sltrx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: sltrx.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sltrx
            port:
              number: 5000
